--- a/software.html
+++ b/software.html
@@ -16,6 +16,22 @@
       padding: 1rem;
       background: #1a1a1a;
     }
+    .software-btn {
+      background-color: grey;
+      border: 2px solid darkgrey;
+      padding: 0.25rem;
+      border-radius: 0; /* no rounds */
+      display: inline-block;
+    }
+    .software-btn img {
+      display: block;
+      height: 32px; /* adjust size */
+      width: auto;
+    }
+    .software-btn:hover {
+      background-color: #666;
+      border-color: #444;
+    }
     main {
       padding: 2rem;
       text-align: center;
